--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+certifi==2024.8.30
 contourpy==1.2.1
 cycler==0.12.1
 et-xmlfile==1.1.0
 fonttools==4.53.1
+geopandas==1.0.1
 kiwisolver==1.4.5
 matplotlib==3.9.2
 numpy==2.1.0
@@ -10,10 +12,13 @@ packaging==24.1
 pandas==2.2.2
 patsy==0.5.6
 pillow==10.4.0
+pyogrio==0.10.0
 pyparsing==3.1.2
+pyproj==3.7.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 scipy==1.14.1
+shapely==2.0.6
 six==1.16.0
 statsmodels==0.14.2
 tzdata==2024.1
