--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+affine==2.4.0
+attrs==24.2.0
 certifi==2024.8.30
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
 et-xmlfile==1.1.0
 fonttools==4.53.1
 geopandas==1.0.1
+imageio==2.35.1
 kiwisolver==1.4.5
+lazy_loader==0.4
 matplotlib==3.9.2
+networkx==3.3
 numpy==2.1.0
 openpyxl==3.1.5
 packaging==24.1
@@ -17,8 +26,11 @@ pyparsing==3.1.2
 pyproj==3.7.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+rasterio==1.4.1
+scikit-image==0.24.0
 scipy==1.14.1
 shapely==2.0.6
 six==1.16.0
 statsmodels==0.14.2
+tifffile==2024.9.20
 tzdata==2024.1
