--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ contourpy==1.2.1
 cycler==0.12.1
 et-xmlfile==1.1.0
 fonttools==4.53.1
+geographiclib==2.0
 geopandas==1.0.1
+geopy==2.4.1
 imageio==2.35.1
 kiwisolver==1.4.5
 lazy_loader==0.4
@@ -21,6 +23,7 @@ packaging==24.1
 pandas==2.2.2
 patsy==0.5.6
 pillow==10.4.0
+pyarrow==18.0.0
 pyogrio==0.10.0
 pyparsing==3.1.2
 pyproj==3.7.0
